refactor(product): save/saveBatch/updateById 参数从 Entity 改为 VO
- 10 个 Service 接口+实现层不再暴露 Entity，统一用 VO
- saveBatch 返回 Integer（List<BatchResult>.size()）
- 8 个 VO 类补充字段声明
- SpuInfoServiceImpl + UndoLogServiceImplTest 调用方同步更新